# threads-post

./: LICENSE  Makefile  README.md  post.html  post.org  stack.yaml  threads-post.cabal  untag.sh
docs/: index.html
generated-resources/: README  bench1.txt  bench1.txt.mem  bench2.txt  bench2.txt.mem  chan-bench.txt  channel1.txt  channel2.txt  channel3.txt  deadlock_chan1.txt  fusion-bench-prof.txt  fusion-bench.txt  task-bench.txt  task-bench.txt.mem
resources/: README  file.txt
src/: BadChannels.hs  BuggyLazyEvaluation.hs  Channels.hs  Common.hs  Main.hs  Optimizations.hs  Process.hs
